# Serial-Port-Assistant

./: CMakeLists.txt  Main.qml  README.md  main.cpp  serialhandler.h
